--- a/index.html
+++ b/index.html
@@ -116,6 +116,13 @@
         function enemyChecker(){
             return enemies.some((data)=>data.top===645)
         }
+        function disable()
+        {
+            document.onkeydown = function (e) 
+            {
+            return false;
+            }
+        }
 
         function gameLoop() {
             let game = setTimeout(gameLoop, 1000);
@@ -136,11 +143,9 @@
 
                 console.log("Win");
         
-                clearTimeout(game)
-
-                document.onkeydown = function (e){
-                    // pass
-                }
+                clearTimeout(game);
+                // disable the keypress
+                disable();
                 
                 }else if(enemyChecker()){
                     let container = document.getElementById("background")
@@ -151,10 +156,9 @@
                     container.appendChild(result)
 
                     console.log("Lose");
-                    clearTimeout(game)
-                    document.onkeydown = function (e){
-                    // pass
-                }
+                    clearTimeout(game);
+                    // disable the keypress
+                    disable();
                 }
             }
             gameEnd();
